--- a/templates/upload_display.html
+++ b/templates/upload_display.html
@@ -8,119 +8,181 @@
     <head>
         <title>Upload and Display Image</title>
         <style>
-            #content {
+            body {
+                background-color: #181a1b;
+                color: #ffffff;
+                display: grid;
+                font-family: Arial, sans-serif;
+                grid-template-rows: auto 1fr;
+                height: 100vh;
+                margin: 0;
+            }
+        
+            #upload-bar, .editable-field, #modalEditPopup {
+                background-color: #2a2e37;
+                border: 1px solid #333;
+                border-radius: 5px;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
                 display: flex;
                 justify-content: space-between;
+                padding: 10px;
             }
-
-            #image-gallery {
-                height: 90vh; 
-                width: 30vw; 
+        
+            #upload-bar {
+                align-items: center;
+                border-bottom: 1px solid #333;
+            }
+        
+            #content {
+                background: #212429;
                 display: grid;
-                grid-template-columns: repeat(3, 1fr);
-                grid-gap: 10px;
-                overflow-y: auto;
+                grid-template-columns: 33.33vw 20vw auto; 
+                overflow: hidden;
             }
-
-            #image-gallery img {
-                width: 100%;
-                height: auto;
-                object-fit: cover;
-            }
-
-            #image-gallery img.selected {
-                border: 3px solid red; 
-            }
-
-            #center-pane {
-                flex-grow: 1;
-                height: 90vh;
-                width: 60vw;
-                display: flex;
-                flex-direction: row;
-            }
-
-            #item-list, #blank-pane {
-                width: 50%;
+        
+            #image-gallery, #item-list, #selected-image {
+                border: 3px solid #333;
+                border-radius: 10px;
+                box-sizing: border-box;
                 height: 100%;
                 overflow-y: auto;
+                opacity: 0.5;
+                transition: opacity 0.3s ease;
             }
-
+        
+            #image-gallery:hover, #item-list:hover, #selected-image:hover {
+                opacity: 1;
+            }
+        
+            #image-gallery {
+                display: grid;
+                grid-gap: 10px;
+                grid-template-columns: repeat(3, 1fr);
+            }
+        
+            #item-list {
+                border-left: 1px solid #333;
+            }
+        
+            .image-container {
+                padding-bottom: 100%;
+                position: relative;
+                width: 100%;
+            }
+        
+            .image-container img {
+                border-radius: 5px;
+                height: 100%;
+                left: 0;
+                object-fit: contain;
+                position: absolute;
+                top: 0;
+                transition: all 0.3s ease;
+                width: 100%;
+            }
+        
+            .image-container img:hover, .image-container img.selected {
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+                transform: scale(1.05);
+            }
+        
+            #image-gallery img.selected, .editable-field:focus {
+                box-shadow: 0 0 10px rgba(204, 204, 204, 0.5);
+            }
+        
             #selected-image {
-                flex-grow: 1;
-                height: 90vh; 
-                width: 30vw;
                 display: flex;
-                justify-content: center;
                 align-items: center;
+                justify-content: center;
             }
-
+        
             #selected-image img {
-                max-width: 100%;
+                display: block;
                 max-height: 100%;
-                object-fit: contain; 
+                max-width: 100%;
+                object-fit: contain;
             }
-
+        
             .editable-field {
-                border: 1px solid #ddd;
+                color: #ffffff;
                 margin: 5px 0;
                 padding: 10px;
+                transition: all 0.3s ease;
                 width: 100%;
             }
-
-            #tag-pane {
-                width: 100%;
-                height: 100%;
-                border: none; /* Remove the default iframe border */
+        
+            #modalEditPopup {
+                display: none;
+                position: absolute !important;
+                opacity: .3;
+                transition: opacity 0.3s ease-out;
             }
 
-            #myModal {
-                position: absolute !important; /* or 'fixed', depending on your needs */
-                background-color: aqua;
+            #modalEditPopup:hover {
+                opacity: 1;
             }
 
+            #modalEditPopup.hidden {
+                opacity: 0;
+            }
+        
+            #btn-save {
+                background-color: #4CAF50;
+                border: none;
+                border-radius: 5px;
+                color: #fff;
+                cursor: pointer;
+                padding: 10px 20px;
+            }
+        
+            #btn-save:hover {
+                background-color: #45a049;
+            }
         </style>
+        
     </head>
     <body>
-        <h1>Upload and Display Image</h1>
+
         <div id="upload-bar">
-            <form method="POST" enctype="multipart/form-data">
-                <input type="file" name="file" multiple>
-                <input type="submit" value="Upload">
-            </form>
+            <div>
+                <form method="POST" enctype="multipart/form-data">
+                    <input type="file" name="file" multiple>
+                    <input type="submit" value="Upload">
+                </form>
+            </div>
+            <div>
+                <button type="button" id="btn-save">Save</button>
+            </div>
         </div>
+        
         <div id="content">
             {% if filenames %}
                 <div id="image-gallery">
                     {% for filename in filenames %}
                         {% set txt_filename = filename.rsplit('.', 1)[0] + '.txt' %}
-                        <img src="{{ url_for('static', filename='uploads/' + filename) }}" 
-                            alt="Uploaded Image" 
-                            data-txt-filename="{{ txt_filename }}">
+                        <div class="image-container">
+                            <img src="{{ url_for('static', filename='uploads/' + filename) }}" 
+                                alt="Uploaded Image" 
+                                data-txt-filename="{{ txt_filename }}">
+                        </div>
                     {% endfor %}
                 </div>
             {% endif %}
-            <div id="center-pane">
-                <div id="item-list">
-                    <!-- this is where the list of editable items will be displayed -->
-                </div>
-                <iframe id="tag-pane" src="/tag-pane">
-                    <!-- this is where the second pane content will be displayed -->
-                </iframe>                
-            </div>
+
+            <div id="item-list">
+                <!-- this is where the list of editable items will be displayed -->
+            </div>     
+
             <div id="selected-image">
                 <!-- this is where the selected image will be displayed -->
             </div>
         </div>
 
-        <div id="myModal" class="modal" role="dialog">
+        <div id="modalEditPopup" class="modal" role="dialog">
             <div class="modal-dialog">
         
                 <!-- Modal content-->
                 <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">×</button>
-                    </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" id="btn-new">New</button>
                         <button type="button" class="btn btn-default" id="btn-remove">Remove</button>
@@ -138,9 +200,41 @@
                 var images = document.querySelectorAll("#image-gallery img");
                 var selectedImageContainer = document.querySelector("#selected-image");
                 var itemList = document.querySelector("#item-list");
+                var saveButton = document.getElementById("btn-save");
+
+                function writeFile() {
+                    var selectedImage = document.querySelector("#image-gallery img.selected");
+                    
+                    // Check if an image is selected
+                    if (selectedImage) {
+                        // Get the new content of the .txt file
+                        var newContent = Array.from(itemList.querySelectorAll('.editable-field')).map(function(field) {
+                            return field.value;
+                        }).join(',');
+
+                        // Send a request to update the .txt file
+                        var txtFilename = selectedImage.getAttribute('data-txt-filename');
+                        fetch('/update-file/' + txtFilename, {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'text/plain'
+                            },
+                            body: newContent
+                        });
+                    }
+                }
+
+                saveButton.addEventListener("click", function() {
+                    writeFile();
+                    fetch('/save', {
+                        method: 'POST',
+                    });
+                });
 
                 images.forEach(function(image) {
                     image.addEventListener("click", function() {
+                        writeFile();
+
                         images.forEach(function(img) {
                             img.classList.remove("selected");
                         });
@@ -159,9 +253,6 @@
                             .then(text => {
                                 updateItemList(text);
                             });
-
-                        // Show the tag pane
-                        document.getElementById('tag-pane').style.display = 'block';
                     });
                 });
 
@@ -173,6 +264,7 @@
                             updateItemList(text);
                         });
                 });
+
 
                 function initializeAutocomplete(selector) {
                     $(selector).autocomplete({
@@ -196,14 +288,23 @@
                         itemList.currentField = field;
                         $('#edit-item-field').val(field.value);
                         updateModalPosition(itemDiv);
-                        $('#myModal').modal('show');
+                        $('#modalEditPopup').modal('show');
                     });
 
                     $(field).blur(function() {
-                        itemList.currentField = null;
-                        $('#myModal').modal('hide');
+                        setTimeout(() => {
+                            if (itemList.currentField !== field) {
+                                return;
+                            }
+
+                            itemList.currentField = null;
+                            $('#modalEditPopup').modal('hide');
+
+                            writeFile();
+                        }, 200); // delay in milliseconds
                     });
                 }
+
 
                 function createEditableField(item) {
                     var itemDiv = document.createElement("div");
@@ -222,8 +323,8 @@
                 function updateModalPosition(itemDiv) {
                     var itemPos = $(itemDiv).offset();
                     var itemWidth = $(itemDiv).outerWidth();
-                    $('#myModal').css('top', itemPos.top + 'px');
-                    $('#myModal').css('left', (itemPos.left + itemWidth + 1) + 'px');
+                    $('#modalEditPopup').css('top', itemPos.top + 'px');
+                    $('#modalEditPopup').css('left', (itemPos.left + itemWidth + 1) + 'px');
                 }
 
                 function updateItemList(csvContent) {
@@ -254,7 +355,15 @@
                     initializeAutocomplete(itemDiv.querySelector(".editable-field"));
                 });
 
-                $('#myModal').on('show.bs.modal', function (e) {
+                $(document).on('click', '#btn-remove', function() {
+                    if(itemList.currentField) {
+                        itemList.currentField.parentElement.remove();
+                    } else {
+                        console.log("itemList.currentField is null");
+                    }
+                });
+
+                $('#modalEditPopup').on('show.bs.modal', function (e) {
                     if (itemList.currentField) {
                         updateModalPosition(itemList.currentField.parentElement);
                     }
