--- a/templates/content.html
+++ b/templates/content.html
@@ -23,5 +23,20 @@
     <div id="selected-image">
         <!-- this is where the selected image will be displayed -->
     </div>
+
+    <div id="modalEditPopup" class="modal" role="dialog">
+        <div class="modal-dialog">
+    
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" id="btn-new">New</button>
+                    <button type="button" class="btn btn-default" id="btn-remove">Remove</button>
+                </div>
+    
+            </div>
+    
+        </div>
+    </div>       
 </div>
 {% endblock %}
